# Solpred

./: .gitignore  LICENSE  README.md  build.clj  deps.edn  pyproject.toml
env/: build.def  requirements.txt
resources/: logback.xml  main.py
resources/datasets/: blackmountain-test.csv  bm-casestudies.edn  bm-trainval.csv  case-studies.md  datasets.edn  stanford-casestudies.edn
resources/ffmpeg/: command.sh
resources/reports/: solpredstyles.css
resources/scripts/: dataset_inspector.py  fully_conv.py  fully_conv_ar.py  fully_conv_image.py  leaky_sunset.py  model3.py  model4.py  model6.py  model7.py  model8.py  model9.py  solpred_common.py  solpreddatamodule.py  sunset.py  sunset_ar.py  sunset_im.py  vis_transformer.py
src/image/: circle.py  crop_resize.py
src/plotting/: interact-plot.py  json-to-interact.py  json-to-static.py  logging_config.json  matplotlib-by-day.py  plot-one-sample.py  plotly_tools.py  publish-categories.py  publish-static.py  scatter-plot.py  single-day-plot.py  static-plot.py  video-plot.py
src/solpred/: core.clj
src/solpred/dataset/: dataloader.clj  dsmaker.clj  shard_maker.clj  split_ds.clj  update_sunset_tars.clj  verifier.clj  webdsmaker.clj
src/solpred/launcher/: launcher.clj  local.clj  slurm.clj
src/solpred/reports/: clean_results.clj  compare_input_spacing.clj  compare_models.clj  day_sequence.clj  dummy.clj  make_ensembles.clj  make_reports.clj  make_summaries.clj  mass_reports.clj  metrics.clj  process_et.clj  process_metrics.clj  process_summaries.clj  single_day.clj  single_model.clj
test/solpred/: core_test.clj
(+20 files in other folders)
